--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <HTML>
 
 <HEAD>
@@ -36,9 +37,9 @@
 <p><basefont FACE="italica" SIZE= "5" COLOR="black"> 
 PROGRAMACION en c: es un conjunto de funciones,definicion de tipos de datos y declaraciones de variables. 
 
-C es un lenguaje de programaci髇 de prop髎ito general? originalmente desarrollado por Dennis Ritchie entre 1969 y 1972 en los Laboratorios Bell, ? como evoluci髇 del anterior lenguaje B, a su vez basado en BCPL.???Al igual que B, es un lenguaje orientado a la implementaci髇 de sistemas operativos, concretamente Unix.
-Hecho principalmente para la fluidez de programaci髇 en sistemas Unix. Se usa tambi閚 para el desarrollo de otros sistemas operativos como Windows o GNU/Linux. Igualmente para aplicaciones de escritorio como GIMP, cuyo principal lenguaje de programaci髇 es C.
-Todo programa de C consta, b醩icamente, de un conjunto de funciones, y una funci髇 llamada main, la cual es la primera que se ejecuta al comenzar.
+C es un lenguaje de programaci贸n de prop贸sito general? originalmente desarrollado por Dennis Ritchie entre 1969 y 1972 en los Laboratorios Bell, ? como evoluci贸n del anterior lenguaje B, a su vez basado en BCPL.???Al igual que B, es un lenguaje orientado a la implementaci贸n de sistemas operativos, concretamente Unix.
+Hecho principalmente para la fluidez de programaci贸n en sistemas Unix. Se usa tambi茅n para el desarrollo de otros sistemas operativos como Windows o GNU/Linux. Igualmente para aplicaciones de escritorio como GIMP, cuyo principal lenguaje de programaci贸n es C.
+Todo programa de C consta, b谩sicamente, de un conjunto de funciones, y una funci贸n llamada main, la cual es la primera que se ejecuta al comenzar.
 
 </p>
 
